# mr-math

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  README.md  USAGE.md  bench-viz.py  conanfile.py  math.hpp  mr-math.natvis  run-bench-viz.sh
.github/workflows/: benchmarks.yml  cmake-single-platform.yml  tests.yml
bench/: CMakeLists.txt  bench.cpp  bench_options.hpp.in  main.cpp
cmake/: dependencies.cmake  download_benchmark.cmake  download_test.cmake
dev/bench/: data.js
include/: camera.hpp  def.hpp  math.hpp  matr.hpp  rot.hpp  row.hpp  units.hpp  vec.hpp
include/mr-math/: bound_box.hpp  camera.hpp  color.hpp  debug.hpp  def.hpp  math.hpp  matr.hpp  norm.hpp  norm.hpp.orig  operators.hpp  packing.hpp  packing.slang  quat.hpp  quat.hpp.orig  rot.hpp  row.hpp  units.hpp  vec.hpp
include/mr-math/operators/: matr.hpp  row.hpp  units.hpp
mr-math/: camera.hpp  def.hpp  math.hpp  matr.hpp  norm.hpp  operators.hpp  rot.hpp  row.hpp  units.hpp  vec.hpp
mr-math/operators/: matr.hpp  operators.hpp  units.hpp
tests/: CMakeLists.txt  main.cpp  matr.cpp  misc.cpp  norm.cpp  quat.cpp  vec.cpp
